# video-downloader

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml  requirements.txt  sync-to-nas.sh
.forgejo/workflows/: build.yml
tests/: test_downloader.py
vidarchive/: __init__.py  cli.py  downloader.py  wsgi.py
vidarchive/web/: __init__.py  routes.py
vidarchive/web/static/: style.css
vidarchive/web/templates/: base.html  index.html  status.html
