[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vidarchive"
version = "0.1.0"
description = "Personal YouTube video archiver"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp>=2024.1.0",
    "click>=8.1",
    "flask>=3.0",
    "gunicorn>=21.0",
]

[project.scripts]
vidarchive = "vidarchive.cli:main"
